--- a/scss/content.scss
+++ b/scss/content.scss
@@ -511,32 +511,61 @@ section#section3>h3 {
     position: fixed;
     top: 0;
     z-index: 200;
-    ul{
+    ul#first{
+        margin: 0 auto;
         position: absolute;
-        background-color: $color-w;
+        background-color: $color-g;
         width: 300%;
         overflow: hidden;
         height: 600px;
         top: 20%;
+        display: flex;
+        flex-wrap: nowrap;
         li#slide1{
             position: relative;
             width: 33.3333%;
             overflow: hidden;
             height: 100%;
             ul{
+                display: flex;
+                flex-wrap: wrap;
                 width: 100%;
-                display: block;
-                li{
-                    height: 100px;
+                height: 100%;
+                padding: 10px 20px;
+                li{ width: 100%;
+                    height: 150px;
+                    margin-bottom: 50px;
                     figure{
                         display: flex;
                         flex-wrap: nowrap;
+                        align-items: center;
                         img{
-                            width: 100px;
+                            border-radius: 10px;
+                            width: 150px;
+                            height: 150px;
+                        }
+                        figcaption{
+                            width: 1000px;
                             height: 100px;
+                            background-color: $color-w;
+                            display: flex;
+                            align-items: center;
+                            font-weight: bold;
+                            border-radius: 5px;
                         }
                     }
                 }
+                li:last-child{
+                    margin-bottom: 0;
+                }
+             
+            }
+        }
+        li#slide2{
+            width: 33.3333%;
+            .selectwrap{
+                display: flex;
+                align-items: center;
             }
         }
     }
